[package]
name = "lumine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = '0.2', features = ["full"] }
serde = "1.0.97"
serde_derive = "1.0"
serde_yaml = "0.8.21"
libflate = "1"
byteorder = "1.4.3"
lumine-protocol = {path = "protocol", version = "0.1.0"}